samples/_failures_safe/1761631687_061606_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df30c9cd.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_df30c9cd.c:179:12: error: missing terminating " character
  179 |     printf("Dijkstra shortest paths from vertex %d:\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_df30c9cd.c:179:5: error: expected expression at end of input
  179 |     printf("Dijkstra shortest paths from vertex %d:\n
      |     ^~~~~~
./samples/SAFE/__tmp_df30c9cd.c:179:5: error: expected declaration or statement at end of input
